Updated config, README, and added examples.

--- a/nanos.cfg
+++ b/nanos.cfg
@@ -14,25 +14,24 @@ sp_cpp_lambda_square_paren      = add
 sp_cpp_lambda_square_brace      = add
 sp_cpp_lambda_paren_brace       = add
 sp_cpp_lambda_fparen            = add
-sp_assign_default               = add
-sp_before_assign                = add
-sp_after_assign                 = add
+sp_assign_default               = force
+sp_before_assign                = force
+sp_after_assign                 = force
 sp_enum_paren                   = add
-sp_enum_assign                  = add
-sp_enum_before_assign           = add
-sp_enum_after_assign            = add
-sp_enum_colon                   = add
-sp_bool                         = add
-sp_compare                      = add
-sp_inside_paren                 = add
-sp_cparen_oparen                = add
-sp_paren_paren                  = true
-sp_paren_brace                  = add
+sp_enum_assign                  = force
+sp_enum_colon                   = force
+sp_bool                         = force
+sp_compare                      = force
+sp_inside_paren                 = remove
+sp_paren_paren                  = remove
+sp_cparen_oparen                = force
+sp_balance_nested_parens        = true
+sp_paren_brace                  = force
 sp_brace_brace                  = remove
 sp_before_ptr_star              = remove
 sp_before_unnamed_ptr_star      = remove
 sp_between_ptr_star             = remove
-sp_after_ptr_star               = remove
+sp_after_ptr_star               = force
 sp_after_ptr_block_caret        = remove
 sp_after_ptr_star_qualifier     = remove
 sp_after_ptr_star_func          = remove
@@ -44,7 +43,7 @@ sp_after_byref                  = remove
 sp_after_byref_func             = remove
 sp_before_byref_func            = force
 sp_angle_shift                  = remove
-sp_before_sparen                = add
+sp_before_sparen                = force
 sp_inside_sparen                = remove
 sp_inside_sparen_open           = remove
 sp_inside_sparen_close          = remove
@@ -53,7 +52,6 @@ sp_sparen_brace                 = force
 sp_before_semi_for              = remove
 sp_before_semi_for_empty        = remove
 sp_after_semi                   = remove
-sp_after_semi_for               = remove
 sp_after_semi_for_empty         = remove
 sp_before_square                = remove
 sp_before_squares               = remove
@@ -102,12 +100,17 @@ sp_brace_else                   = force
 sp_brace_typedef                = force
 sp_catch_brace                  = force
 sp_cond_colon                   = force
+sp_cond_question_before         = force
+sp_cond_question_after          = force
+sp_cond_ternary_short           = force
 sp_case_label                   = force
-sp_inside_newop_paren           = add
-sp_inside_newop_paren_open      = add
-sp_inside_newop_paren_close     = add
+sp_after_for_colon              = force
+sp_inside_newop_paren           = remove
+sp_inside_newop_paren_open      = remove
+sp_inside_newop_paren_close     = remove
 force_tab_after_define          = true
 indent_columns                  = 4
+indent_switch_case              = 4
 nl_assign_leave_one_liners      = true
 nl_if_leave_one_liners          = true
 nl_while_leave_one_liners       = true
@@ -130,9 +133,7 @@ nl_brace_while                  = remove
 nl_switch_brace                 = remove
 nl_func_paren                   = remove
 nl_func_def_paren               = remove
-nl_func_decl_args               = remove
-nl_func_def_args                = remove
-nl_func_call_args               = remove
+nl_func_decl_start_multi_line   = true
 nl_func_decl_empty              = remove
 nl_func_def_empty               = remove
 nl_func_call_empty              = remove
